--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": " remix vite:build",
     "lint": "eslint .",
     "preview": "vite preview",
     "server": " json-server --watch Quotes.json --port 3003"
   },
   "dependencies": {
+    "@remix-run/dev": "^2.12.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "json-server": "^1.0.0-beta.3",
