--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
   },
   "dependencies": {
     "@remix-run/dev": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-remix": "^0.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.11.1",
+    "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
   }
 }
